modified all files excluding script.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Easiest JS day/night toggle</title>
 </head>
 <body>
+    <a href="https://github.com/Mark-Eugene-Barasu/JS-day-night-toggle">Back to Git Repo</a>
     <h1>Day-Night Toggle</h1>
     <button onclick="toggleTheme()">
         Toggle
