--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="https://github.com/Mark-Eugene-Barasu/JS-day-night-toggle">Back to Git Repo</a>
-    <h1>Day-Night Toggle</h1>
+    <h1>Day-Night Toggle.</h1>
     <button onclick="toggleTheme()">
         Toggle
     </button>
